--- a/octo/model/Test_visualization.ipynb
+++ b/octo/model/Test_visualization.ipynb
@@ -2,12 +2,12 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "start_time": "2025-02-25T04:16:44.279389Z",
-     "end_time": "2025-02-25T04:16:57.851265Z"
+     "start_time": "2025-02-26T00:00:13.452630Z",
+     "end_time": "2025-02-26T00:00:18.494684Z"
     }
    },
    "outputs": [
@@ -17,7 +17,7 @@
       "application/vnd.jupyter.widget-view+json": {
        "version_major": 2,
        "version_minor": 0,
-       "model_id": "45e8cc38544e4591b626fa24d25a6294"
+       "model_id": "c8edfcfebaa54a8fb0dc2a3c8d588463"
       }
      },
      "metadata": {},
@@ -34,35 +34,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Loading BRIDGE dataset...\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "2025-02-25 04:16:57.876399: W external/local_tsl/tsl/platform/cloud/google_auth_provider.cc:184] All attempts to get a Google authentication bearer token failed, returning an empty token. Retrieving token from files failed with \"NOT_FOUND: Could not locate the credentials file.\". Retrieving token from GCE failed with \"FAILED_PRECONDITION: Error executing an HTTP request: libcurl code 6 meaning 'Couldn't resolve host name', error details: Could not resolve host: metadata.google.internal\".\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Loading BRIDGE dataset...\n",
       "Instruction: Place the can to the left of the pot.\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "2025-02-25 04:17:03.409 python[2988:22304] +[IMKClient subclass]: chose IMKClient_Modern\n",
-      "2025-02-25 04:17:03.409 python[2988:22304] +[IMKInputSession subclass]: chose IMKInputSession_Modern\n"
      ]
     }
    ],
@@ -104,14 +83,14 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "start_time": "2025-02-25T04:16:57.852350Z",
-     "end_time": "2025-02-25T04:17:07.056385Z"
+     "start_time": "2025-02-26T00:00:18.496910Z",
+     "end_time": "2025-02-26T00:00:30.825704Z"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "outputs": [
     {
      "name": "stdout",
@@ -126,7 +105,7 @@
       "application/vnd.jupyter.widget-view+json": {
        "version_major": 2,
        "version_minor": 0,
-       "model_id": "d7938f8441134840b123b3567449bbe5"
+       "model_id": "3022867ba4294547ac09cc44a636a121"
       }
      },
      "metadata": {},
@@ -136,7 +115,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "WARNING:root:'tasks' is missing items compared to example_batch: {'image_wrist', 'pad_mask_dict/timestep', 'pad_mask_dict/image_wrist', 'timestep'}\n"
+      "WARNING:root:'tasks' is missing items compared to example_batch: {'pad_mask_dict/timestep', 'pad_mask_dict/image_wrist', 'timestep', 'image_wrist'}\n"
      ]
     }
    ],
@@ -152,23 +131,23 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "start_time": "2025-02-25T04:17:07.056281Z",
-     "end_time": "2025-02-25T04:17:12.264696Z"
+     "start_time": "2025-02-26T00:00:29.187247Z",
+     "end_time": "2025-02-26T00:00:35.045699Z"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "  0%|          | 0/37 [00:00<?, ?it/s]WARNING:root:'observations' is missing items compared to example_batch: {'pad_mask_dict/image_primary', 'timestep', 'image_wrist', 'pad_mask_dict/timestep', 'pad_mask_dict/image_wrist', 'task_completed'}\n",
+      "  0%|          | 0/37 [00:00<?, ?it/s]WARNING:root:'observations' is missing items compared to example_batch: {'pad_mask_dict/image_wrist', 'timestep', 'image_wrist', 'task_completed', 'pad_mask_dict/timestep', 'pad_mask_dict/image_primary'}\n",
       "WARNING:root:No pad_mask_dict found. Nothing will be masked.\n",
       "WARNING:root:Skipping observation tokenizer: obs_wrist\n",
-      "100%|██████████| 37/37 [00:24<00:00,  1.49it/s]\n"
+      "100%|██████████| 37/37 [00:25<00:00,  1.45it/s]\n"
      ]
     }
    ],
@@ -208,14 +187,14 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "start_time": "2025-02-25T04:17:12.266469Z",
-     "end_time": "2025-02-25T04:17:37.182245Z"
+     "start_time": "2025-02-26T00:00:35.035630Z",
+     "end_time": "2025-02-26T00:01:00.525993Z"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "outputs": [],
    "source": [
     "import numpy as np\n",
@@ -262,14 +241,14 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "start_time": "2025-02-25T04:17:37.192243Z",
-     "end_time": "2025-02-25T04:17:37.209595Z"
+     "start_time": "2025-02-26T00:01:00.540093Z",
+     "end_time": "2025-02-26T00:01:00.556050Z"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "outputs": [],
    "source": [
     "import os\n",
@@ -320,20 +299,20 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "start_time": "2025-02-25T04:17:37.202611Z",
-     "end_time": "2025-02-25T04:17:37.210615Z"
+     "start_time": "2025-02-26T00:01:00.553062Z",
+     "end_time": "2025-02-26T00:01:00.556311Z"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Visualizing Attention: 100%|██████████| 37/37 [03:39<00:00,  5.92s/it]\n"
+      "Visualizing Attention: 100%|██████████| 37/37 [03:37<00:00,  5.89s/it]\n"
      ]
     }
    ],
@@ -344,14 +323,14 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "start_time": "2025-02-25T04:17:37.209872Z",
-     "end_time": "2025-02-25T04:21:16.405577Z"
+     "start_time": "2025-02-26T00:01:00.557442Z",
+     "end_time": "2025-02-26T00:04:38.496472Z"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "outputs": [
     {
      "name": "stdout",
@@ -364,7 +343,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Processing Frames: 100%|██████████| 444/444 [00:07<00:00, 55.79it/s]\n"
+      "Processing Frames: 100%|██████████| 444/444 [00:07<00:00, 57.21it/s]\n"
      ]
     },
     {
@@ -450,23 +429,15 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "start_time": "2025-02-25T04:21:16.408272Z",
-     "end_time": "2025-02-25T04:22:06.557648Z"
+     "start_time": "2025-02-26T00:04:38.502016Z",
+     "end_time": "2025-02-26T00:05:30.318164Z"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Visualizing Mean Attention: 100%|██████████| 37/37 [00:01<00:00, 20.91it/s]\n"
-     ]
-    }
-   ],
+   "execution_count": 11,
+   "outputs": [],
    "source": [
     "def overlay_attention_on_image(image, attn_map, patch_size=16, title=\"\"):\n",
     "\n",
@@ -570,30 +541,15 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "start_time": "2025-02-25T04:40:44.410976Z",
-     "end_time": "2025-02-25T04:40:48.108585Z"
+     "start_time": "2025-02-26T00:05:30.326712Z",
+     "end_time": "2025-02-26T00:05:30.328548Z"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Visualizing Max Attention: 100%|██████████| 37/37 [00:01<00:00, 20.87it/s]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Video saved as: max_attention_video.mp4\n"
-     ]
-    }
-   ],
+   "execution_count": 12,
+   "outputs": [],
    "source": [
     "# def visualize_max_attention(attention_maps_per_step, images, save_path=\"attention_results_max\"):\n",
     "#     \"\"\"\n",
@@ -656,8 +612,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "start_time": "2025-02-25T04:51:52.385506Z",
-     "end_time": "2025-02-25T04:51:55.049956Z"
+     "start_time": "2025-02-26T00:05:30.329198Z",
+     "end_time": "2025-02-26T00:05:30.334909Z"
     }
    }
   },
@@ -672,100 +628,104 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "outputs": [],
    "source": [
-    "# import os\n",
-    "# import numpy as np\n",
-    "# import cv2\n",
-    "# import matplotlib.pyplot as plt\n",
-    "# import seaborn as sns\n",
-    "# from tqdm import tqdm\n",
-    "# from scipy.ndimage import zoom\n",
-    "#\n",
-    "# def extract_task_to_image_attention(attention_maps_per_step, task_token_idx, image_token_indices):\n",
-    "#     \"\"\"\n",
-    "#     Extracts attention weights from task-related words to image tokens.\n",
-    "#\n",
-    "#     Args:\n",
-    "#         attention_maps_per_step: List of attention maps extracted from OctoModel.\n",
-    "#         task_token_idx: Index of the task-related word token.\n",
-    "#         image_token_indices: Indices of the image tokens.\n",
-    "#\n",
-    "#     Returns:\n",
-    "#         A list of extracted attention scores mapping task words to image tokens.\n",
-    "#     \"\"\"\n",
-    "#     extracted_attention = []\n",
-    "#\n",
-    "#     for step in tqdm(range(len(attention_maps_per_step)), desc=\"Extracting Task-Image Attention\"):\n",
-    "#         step_attention = []\n",
-    "#         num_layers = len(attention_maps_per_step[step][\"all\"])\n",
-    "#\n",
-    "#         for layer_idx in range(num_layers):\n",
-    "#             attn_map = attention_maps_per_step[step][\"all\"][layer_idx]  # Shape: (num_heads, num_tokens)\n",
-    "#\n",
-    "#             # Fix batch dimension issue if necessary\n",
-    "#             if attn_map.ndim == 3 and attn_map.shape[0] == 1:\n",
-    "#                 attn_map = attn_map[0]  # Remove batch dim\n",
-    "#\n",
-    "#             if attn_map.ndim != 2:\n",
-    "#                 print(f\"Unexpected shape at step {step}, layer {layer_idx}: {attn_map.shape}\")\n",
-    "#                 continue\n",
-    "#\n",
-    "#             # Extract attention from task token to image tokens\n",
-    "#             task_to_image_attention = attn_map[:, task_token_idx, image_token_indices]  # Shape: (num_heads, image_token_count)\n",
-    "#             step_attention.append(task_to_image_attention)\n",
-    "#\n",
-    "#         extracted_attention.append(step_attention)\n",
-    "#\n",
-    "#     return extracted_attention\n",
-    "#\n",
-    "# def plot_task_image_attention(attention_scores, image, title=\"Task to Image Attention\", save_path=None):\n",
-    "#     \"\"\"\n",
-    "#     Visualizes attention from task tokens to image tokens as a heatmap.\n",
-    "#\n",
-    "#     Args:\n",
-    "#         attention_scores: (num_heads, image_token_count) - Extracted attention scores.\n",
-    "#         image: Original image.\n",
-    "#         title: Title for the visualization.\n",
-    "#         save_path: If provided, saves the heatmap.\n",
-    "#     \"\"\"\n",
-    "#     avg_attention = attention_scores.mean(axis=0)  # Average across heads\n",
-    "#     grid_size = int(np.sqrt(len(avg_attention)))\n",
-    "#\n",
-    "#     attn_grid = avg_attention.reshape((grid_size, grid_size))\n",
-    "#     attn_grid = zoom(attn_grid, (image.shape[0] // grid_size, image.shape[1] // grid_size), order=1)\n",
-    "#\n",
-    "#     plt.figure(figsize=(8, 8))\n",
-    "#     plt.imshow(image)\n",
-    "#     sns.heatmap(attn_grid, alpha=0.6, cmap='jet', linewidths=0, linecolor='black')\n",
-    "#     plt.title(title)\n",
-    "#     plt.axis(\"off\")\n",
-    "#\n",
-    "#     if save_path:\n",
-    "#         plt.savefig(save_path)\n",
-    "#     plt.show()\n",
-    "#\n",
-    "# def run_task_image_attention_analysis(attention_maps_per_step, images, task_token_idx, image_token_indices, save_dir=\"task_image_attention\"):\n",
-    "#     \"\"\"\n",
-    "#     Extracts and visualizes attention from task-related words to image tokens.\n",
-    "#\n",
-    "#     Args:\n",
-    "#         attention_maps_per_step: List of attention maps.\n",
-    "#         images: List of input images.\n",
-    "#         task_token_idx: Index of task-related word.\n",
-    "#         image_token_indices: Indices of image tokens.\n",
-    "#         save_dir: Directory to save attention visualizations.\n",
-    "#     \"\"\"\n",
-    "#     os.makedirs(save_dir, exist_ok=True)\n",
-    "#     extracted_attention = extract_task_to_image_attention(attention_maps_per_step, task_token_idx, image_token_indices)\n",
-    "#\n",
-    "#     for step in range(len(images)):\n",
-    "#         save_path = os.path.join(save_dir, f\"step_{step}_task_to_image.png\")\n",
-    "#         plot_task_image_attention(extracted_attention[step][-1], images[step], title=f\"Step {step} - Task to Image Attention\", save_path=save_path)\n"
+    "import os\n",
+    "import numpy as np\n",
+    "import cv2\n",
+    "import matplotlib.pyplot as plt\n",
+    "import seaborn as sns\n",
+    "from tqdm import tqdm\n",
+    "from scipy.ndimage import zoom\n",
+    "\n",
+    "def extract_task_to_image_attention(attention_maps_per_step, task_token_idx, image_token_indices):\n",
+    "    \"\"\"\n",
+    "    Extracts attention weights from task-related words to image tokens.\n",
+    "\n",
+    "    Args:\n",
+    "        attention_maps_per_step: List of attention maps extracted from OctoModel.\n",
+    "        task_token_idx: Index of the task-related word token.\n",
+    "        image_token_indices: Indices of the image tokens.\n",
+    "\n",
+    "    Returns:\n",
+    "        A list of extracted attention scores mapping task words to image tokens.\n",
+    "    \"\"\"\n",
+    "    extracted_attention = []\n",
+    "\n",
+    "    for step in tqdm(range(len(attention_maps_per_step)), desc=\"Extracting Task-Image Attention\"):\n",
+    "        step_attention = []\n",
+    "        num_layers = len(attention_maps_per_step[step][\"all\"])\n",
+    "\n",
+    "        for layer_idx in range(num_layers):\n",
+    "            attn_map = attention_maps_per_step[step][\"all\"][layer_idx]  # Shape: (num_heads, num_tokens)\n",
+    "\n",
+    "            # Fix batch dimension issue if necessary\n",
+    "            if attn_map.ndim == 3 and attn_map.shape[0] == 1:\n",
+    "                attn_map = attn_map[0]  # Remove batch dim\n",
+    "\n",
+    "            if attn_map.ndim != 2:\n",
+    "                print(f\"Unexpected shape at step {step}, layer {layer_idx}: {attn_map.shape}\")\n",
+    "                continue\n",
+    "\n",
+    "            # Extract attention from task token to image tokens\n",
+    "            task_to_image_attention = attn_map[:, task_token_idx, image_token_indices]  # Shape: (num_heads, image_token_count)\n",
+    "            step_attention.append(task_to_image_attention)\n",
+    "\n",
+    "        extracted_attention.append(step_attention)\n",
+    "\n",
+    "    return extracted_attention\n",
+    "\n",
+    "def plot_task_image_attention(attention_scores, image, title=\"Task to Image Attention\", save_path=None):\n",
+    "    \"\"\"\n",
+    "    Visualizes attention from task tokens to image tokens as a heatmap.\n",
+    "\n",
+    "    Args:\n",
+    "        attention_scores: (num_heads, image_token_count) - Extracted attention scores.\n",
+    "        image: Original image.\n",
+    "        title: Title for the visualization.\n",
+    "        save_path: If provided, saves the heatmap.\n",
+    "    \"\"\"\n",
+    "    avg_attention = attention_scores.mean(axis=0)  # Average across heads\n",
+    "    grid_size = int(np.sqrt(len(avg_attention)))\n",
+    "\n",
+    "    attn_grid = avg_attention.reshape((grid_size, grid_size))\n",
+    "    attn_grid = zoom(attn_grid, (image.shape[0] // grid_size, image.shape[1] // grid_size), order=1)\n",
+    "\n",
+    "    plt.figure(figsize=(8, 8))\n",
+    "    plt.imshow(image)\n",
+    "    sns.heatmap(attn_grid, alpha=0.6, cmap='jet', linewidths=0, linecolor='black')\n",
+    "    plt.title(title)\n",
+    "    plt.axis(\"off\")\n",
+    "\n",
+    "    if save_path:\n",
+    "        plt.savefig(save_path)\n",
+    "    plt.show()\n",
+    "\n",
+    "def run_task_image_attention_analysis(attention_maps_per_step, images, task_token_idx, image_token_indices, save_dir=\"task_image_attention\"):\n",
+    "    \"\"\"\n",
+    "    Extracts and visualizes attention from task-related words to image tokens.\n",
+    "\n",
+    "    Args:\n",
+    "        attention_maps_per_step: List of attention maps.\n",
+    "        images: List of input images.\n",
+    "        task_token_idx: Index of task-related word.\n",
+    "        image_token_indices: Indices of image tokens.\n",
+    "        save_dir: Directory to save attention visualizations.\n",
+    "    \"\"\"\n",
+    "    os.makedirs(save_dir, exist_ok=True)\n",
+    "    extracted_attention = extract_task_to_image_attention(attention_maps_per_step, task_token_idx, image_token_indices)\n",
+    "\n",
+    "    for step in range(len(images)):\n",
+    "        save_path = os.path.join(save_dir, f\"step_{step}_task_to_image.png\")\n",
+    "        plot_task_image_attention(extracted_attention[step][-1], images[step], title=f\"Step {step} - Task to Image Attention\", save_path=save_path)\n"
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "ExecuteTime": {
+     "start_time": "2025-02-26T00:05:30.334214Z",
+     "end_time": "2025-02-26T00:05:30.340031Z"
+    }
    }
   }
  ],
